更新javadoc生成方式